--- a/pages/cards.njk
+++ b/pages/cards.njk
@@ -1,5 +1,12 @@
 ---
 layout: layout/main.njk
+
+pagination:
+    data: contentful
+    size: 1
+    alias: card
+title: Welcome to Jamstack!
+subtitle: SSG X Contentful
 ---
 
 <div class="container">
